# pico-waveshare-epaper-v2-154b

./: CMakeLists.txt  EPaperDevice.cpp  EPaperDevice.h  EPaperDevice.hpp  PicoSDKConfig.cmake  README.md  Waveshare154V2b.cpp  blink.c  e-paper.cpp  e-paper.sln  e-paper.vgdbproj  pico-waveshare_ePaper_1_54in.c  pico-waveshare_ePaper_1_54in.hpp  pio_spi.c  pio_spi.h
.visualgdb/CodeDB/e-paper.vgdbproj-Debug-VisualGDB/: GlobalFileTable.000  GlobalFileTable.001  blink.npa00  blink.npd  blink.rdb  codedb.lck  pico-waveshare_ePaper_1_54in.npa00  pico-waveshare_ePaper_1_54in.npd  pico-waveshare_ePaper_1_54in.rdb  tmp00000001.npa00  tmp00000002.npa00  tmp00000003.npa01
.visualgdb/CodeDB/e-paper.vgdbproj-Debug-VisualGDB/GlobalCache/000/: Files.idx  Names.idx
.visualgdb/CodeDB/e-paper.vgdbproj-Debug-VisualGDB/GlobalCache/001/: Files.idx  Names.idx
.visualgdb/VisualGDBCache/e-paper-Debug-VisualGDB/: ImplicitCompilerFlags.xml  UpToDateChecklist.db
.visualgdb/VisualGDBCache/e-paper-Debug-VisualGDB/CodeModelCache/: CodeModelIndex.txt  cache-v2-a62f7f031f5157e06b85.json  cmakeFiles-v1-f97415c9dc402b0e5000.json  codemodel-v2-e8a937a98fef8ac647ce.json  index-2021-11-21T19-23-39-0508.json  target-blink-DEBUG-15b65220add779249677.json  target-bs2_default-DEBUG-856cdd0c6fcd17373ba6.json  target-bs2_default_bin-DEBUG-e33911effc611ec52568.json  target-bs2_default_padded_checksummed_asm-DEBUG-a8f3d3695186b586a0a2.json
